CMAKE_MINIMUM_REQUIRED(VERSION 3.25)

FIND_PACKAGE(Git)

EXECUTE_PROCESS(
    COMMAND ${CMAKE_COMMAND} -D SRC=${CMAKE_SOURCE_DIR}/inc/version.h.in -D DST=${CMAKE_BINARY_DIR}/version.h -D GIT_EXECUTABLE=${GIT_EXECUTABLE} -P ${CMAKE_SOURCE_DIR}/cmake/version.cmake
    OUTPUT_VARIABLE ASSIST_VERSION
    OUTPUT_STRIP_TRAILING_WHITESPACE
    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
)

PROJECT(
    assist
    LANGUAGES CXX
    VERSION ${ASSIST_VERSION}
)
